<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mainbg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logoimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imageView_desc"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="50.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_calltel"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <cn.com.cfz.kuozhan.MMClearEditText
            android:id="@+id/edt_calltel"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_bg_selector_red"
            android:hint="@string/register_calltel_hint"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" 
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="20.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <cn.com.cfz.kuozhan.MMClearEditText
            android:id="@+id/edt_password"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_bg_selector_red"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="30.0dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

       <!--  <Button
            android:id="@+id/btn_anonymous"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="3"
            android:background="@drawable/report_bg_style"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:text="匿名登录"
            android:textColor="@color/white"
            android:textSize="20sp" />
			-->
        <Button
            android:id="@+id/btn_fast_register"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="3"
            android:background="@drawable/report_bg_style"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:text="注册"
            android:textColor="@color/white"
            android:textSize="20sp" /> 

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/report_bg_style"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="10dip"
            android:paddingBottom="10dip"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>